tests/ui/unstable-feature-bound/unstable-feature-cross-crate-exact-symbol.fail.stderr
error[E0658]: use of unstable library feature `feat_moo`
  --> $DIR/unstable-feature-cross-crate-exact-symbol.rs:16:5
   |
LL |     Moo::foo();
   |     ^^^
   |
   = help: add `#![feature(feat_moo)]` to the crate attributes to enable
   = note: this compiler was built on YYYY-MM-DD; consider upgrading it if it is out of date
   = note: required for `Moo` to implement `Foo`

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0658`.
